--- a/CarsCrete/ClientApp/src/app/booking-form/booking-form.component.css
+++ b/CarsCrete/ClientApp/src/app/booking-form/booking-form.component.css
@@ -282,3 +282,16 @@ input, select {
 .form-container-in>h3{
     margin-top: 10px;
 }
+.car-img>i{
+    z-index: 200;
+    position: absolute;
+    bottom: 10px;
+    right: 20px;
+    background-color: white;
+    padding: 5px;
+    font-size: 30px;
+    border-radius: 4px;
+}
+.car-img>i:hover{
+    background-color: rgb(90, 172, 248);
+}
