--- a/CarsCrete/ClientApp/src/styles.css
+++ b/CarsCrete/ClientApp/src/styles.css
@@ -103,6 +103,25 @@ span.is-invalid, p.is-invalid{
     .car-img:hover>.blur{
         opacity: 1;
     }
+    .car-img:hover>i.fa-picture-o{
+        opacity: 1;
+        right: 20px !important;
+    }
+    .car-img>i.fa-picture-o{
+        z-index: 200;
+        position: absolute;
+        bottom: 10px;
+        right: -50px;
+        transition: 0.2s;
+        background-color: white;
+        padding: 5px;
+        font-size: 30px;
+        border-radius: 4px;
+    }
+    .car-img>i.fa-picture-o:hover{
+        background-color: rgb(90, 172, 248);
+       
+    }
 
     .detail-item>i{
         z-index: 20;
