--- a/CarsCrete/ClientApp/src/app/user-profile/user-profile.component.css
+++ b/CarsCrete/ClientApp/src/app/user-profile/user-profile.component.css
@@ -137,3 +137,38 @@
     z-index: 100;
 }
 
+.item{
+    width: 100%;
+    margin: 5px;
+    display: flex;
+    flex-direction: column;
+}
+.inner{
+    margin: 0;
+    flex-direction: row;
+}
+.inner-item{
+    width: 33%;
+}
+input{
+    max-width: 100%;
+}
+.inner-item input{
+    width:100%;
+}
+.item textarea{
+    width: 100%;
+    height: 100px;
+}
+button{
+    margin-top: 10px; 
+}
+.form{
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px black;
+}
+.form>.item{
+    margin-left: 0;
+}
+
