--- a/CarsCrete/ClientApp/src/styles.css
+++ b/CarsCrete/ClientApp/src/styles.css
@@ -29,6 +29,7 @@ select{
     cursor: pointer;
 }
 .input{
+    height: 26px;
     border: 1px solid gray;
     border-radius: 4px;
     padding-left: 10px;
@@ -175,5 +176,31 @@ img{
 }
 input{
     padding-left:10px;
+}
+.line {
+    margin-top: 30px;
+    font-size: 12pt;
+    display: flex;
+    justify-content: center;
+    position: relative;
+}
+.line span {
+    background-color: #ffffff;
+    position: relative;
+    z-index: 1;
+    padding: 0px 8px;
+    cursor: pointer;
+    color: rgb(138, 138, 138);
+}
+.line:after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 1px;
+    background-color: rgb(185, 192, 194);
+    position: absolute;
+    top: 50%;
+    margin-top: -1px;
+    z-index: 0;
 }
 
