--- a/CarsCrete/ClientApp/src/app/user-profile/user-profile.component.html
+++ b/CarsCrete/ClientApp/src/app/user-profile/user-profile.component.html
@@ -143,41 +143,46 @@
         <div class="row">
           <div class="col-sm-6">
             <div class="item">
-              <span class="header">{{'MODEL' | translate}}</span>
-              <input class="input" type="text" [(ngModel)]="newCar.Model">
+              <span [ngClass]="{ 'is-invalid': carSubmitted && newCar.Model==null }" class="header">{{'MODEL' | translate}}</span>
+              <input [ngClass]="{ 'is-invalid': carSubmitted && newCar.Model==null }" class="input" type="text" [(ngModel)]="newCar.Model">
+              
             </div>
             <div class="item">
-              <span class="header">{{'PHOTO' | translate}}</span>
-              <input class="input" type="text" [(ngModel)]="newCar.Photo">
+              <span [ngClass]="{ 'is-invalid': carSubmitted && newCar.Photo==null }" class="header">{{'PHOTO' | translate}}</span>
+              <input  [ngClass]="{ 'is-invalid': carSubmitted && newCar.Photo==null }"  class="input" type="text" [(ngModel)]="newCar.Photo">
+              
             </div>
             <div class="item inner">
               <div class="item inner-item">
-                <span class="header">{{'PASSANGERS' | translate}}</span>
-                <input class="input" type="number" [(ngModel)]="newCar.Passangers">
+                <span [ngClass]="{ 'is-invalid': carSubmitted && newCar.Passengers==null }" class="header">{{'PASSENGERS' | translate}}</span>
+                <input [ngClass]="{ 'is-invalid': carSubmitted && newCar.Passengers==null }" class="input" type="number" [(ngModel)]="newCar.Passengers">
+                
               </div>
               <div class="item inner-item">
-                <span class="header">{{'DOORS' | translate}}</span>
-                <input class="input" type="number" [(ngModel)]="newCar.Doors">
+                <span [ngClass]="{ 'is-invalid': carSubmitted && newCar.Doors==null }" class="header">{{'DOORS' | translate}}</span>
+                <input [ngClass]="{ 'is-invalid': carSubmitted && newCar.Doors==null }" class="input" type="number" [(ngModel)]="newCar.Doors">
+                
               </div>
               <div class="item inner-item">
-                <span class="header">{{'CONSUMPTION' | translate}}</span>
-                <input class="input" type="number" [(ngModel)]="newCar.Consumption">
+                <span [ngClass]="{ 'is-invalid': carSubmitted && newCar.Consumption==null }" class="header">{{'CONSUMPTION' | translate}}</span>
+                <input [ngClass]="{ 'is-invalid': carSubmitted && newCar.Consumption==null }" class="input" type="number" [(ngModel)]="newCar.Consumption">
+                
               </div>
             </div>
             <div class="item inner">
-              <div class="item item-inner">
+              <div class="item inner-item">
                 <span class="header">{{'AC' | translate}}</span>
                 <input  type="checkbox" [checked]="newCar.AC" (change)="newCar.AC = !newCar.AC" />
               </div>
-              <div class="item item-inner">
+              <div class="item inner-item">
                 <span class="header">{{'ABS' | translate}}</span>
                 <input  type="checkbox" [checked]="newCar.ABS" (change)="newCar.ABS = !newCar.ABS" />
               </div>
-              <div class="item item-inner">
+              <div class="item inner-item">
                 <span class="header">{{'AIRBAGS' | translate}}</span>
                 <input  type="checkbox" [checked]="newCar.Airbags" (change)="newCar.Airbags = !newCar.Airbags" />
               </div>
-              <div class="item item-inner">
+              <div class="item inner-item">
                 <span class="header">{{'RADIO' | translate}}</span>
                 <input  type="checkbox" [checked]="newCar.Radio" (change)="newCar.Radio = !newCar.Radio" />
               </div>
@@ -186,22 +191,24 @@
           <div class="col-sm-6">
             <div class="item inner">
               <div class="item inner-item">
-                <span class="header">{{'TRANSMISSION' | translate}}</span>
-                <select class="input"  [(ngModel)]="newCar.Transmission">
+                <span [ngClass]="{ 'is-invalid': carSubmitted && newCar.Transmission==null }" class="header">{{'TRANSMISSION' | translate}}</span>
+                <select [ngClass]="{ 'is-invalid': carSubmitted && newCar.Transmission==null }" class="input"  [(ngModel)]="newCar.Transmission">
                   <option value="Automatic">{{'AUTOMATIC' | translate}}</option>
                   <option value="Manual">{{'MANUAL' | translate}}</option>
                 </select>
+                
               </div>
               <div class="item inner-item">
-                <span class="header">{{'FUEL' | translate}}</span>
-                <select class="input"  [(ngModel)]="newCar.Fuel">
+                <span [ngClass]="{ 'is-invalid': carSubmitted && newCar.Fuel==null }" class="header">{{'FUEL' | translate}}</span>
+                <select [ngClass]="{ 'is-invalid': carSubmitted && newCar.Fuel==null }" class="input"  [(ngModel)]="newCar.Fuel">
                   <option value="Petrol">{{'PETROL' | translate}}</option>
                   <option value="Deisel">{{'DEISEL' | translate}}</option>
                 </select>
+                
               </div>
               <div class="item inner-item">
-                <span class="header">{{'BODYTYPE' | translate}}</span>
-                <select class="input"  [(ngModel)]="newCar.BodyType">
+                <span [ngClass]="{ 'is-invalid': carSubmitted && newCar.BodyType==null }" class="header">{{'BODYTYPE' | translate}}</span>
+                <select [ngClass]="{ 'is-invalid': carSubmitted && newCar.BodyType==null }" class="input"  [(ngModel)]="newCar.BodyType">
                   <option value="Sedan">{{'SEDAN' | translate}}</option>
                   <option value="Suv">{{'SUV' | translate}}</option>
                   <option value="Wagon">{{'WAGON' | translate}}</option>
@@ -213,40 +220,61 @@
                   <option value="Crossover">{{'CROSSOVER' | translate}}</option>
                   <option value="Minivan">{{'MINIVAN' | translate}}</option>
                 </select>
+                
               </div>
             </div>
             <div class="item inner">
               <div class="item inner-item">
-                <span class="header">{{'PRICE' | translate}}</span>
-                <input class="input" type="number"  [(ngModel)]="newCar.Price">
+                <span [ngClass]="{ 'is-invalid': carSubmitted && newCar.Price==null }" class="header">{{'PRICE' | translate}}</span>
+                <input [ngClass]="{ 'is-invalid': carSubmitted && newCar.Price==null }" class="input" type="number"  [(ngModel)]="newCar.Price">
+                
               </div>
               <div class="item inner-item">
-                <span class="header">{{'GROUPE' | translate}}</span>
-                <select class="input"  [(ngModel)]="newCar.Groupe">
+                <span [ngClass]="{ 'is-invalid': carSubmitted && newCar.Groupe==null }" class="header">{{'GROUPE' | translate}}</span>
+                <select [ngClass]="{ 'is-invalid': carSubmitted && newCar.Groupe==null }" class="input"  [(ngModel)]="newCar.Groupe">
                   <option value="Economy">{{'ECONOMY' | translate}}</option>
-                  <option value="Full-sizes">{{'FULL_SIZED' | translate}}</option>
+                  <option value="Full-sized">{{'FULL_SIZED' | translate}}</option>
                   <option value="Compact">{{'COMPACT' | translate}}</option>
                   <option value="Medium">{{'MEDIUM' | translate}}</option>
                 </select>
+                
               </div>
               <div class="item inner-item">
-                <span class="header">{{'MINAGE' | translate}}</span>
-                <input class="input" type="number"  [(ngModel)]="newCar.MinAge">
+                <span [ngClass]="{ 'is-invalid': carSubmitted && newCar.MinAge==null }" class="header">{{'MINAGE' | translate}}</span>
+                <input [ngClass]="{ 'is-invalid': carSubmitted && newCar.MinAge==null }" class="input" type="number"  [(ngModel)]="newCar.MinAge">
+                
               </div>
             </div>
             
           </div>
         </div>
         <div class="item">
-          <span class="header">{{'DESCRIPTION' | translate}}</span>
-          <textarea class="input" [(ngModel)]="newCar.Description"></textarea>
+          <span class="header">{{'INCLUDES' | translate}}</span>
+          <div class="includes input">
+            <span class="include-item" *ngFor="let inc of newCar.Includes">{{inc}}<i (click)="removeInclude(inc)" class="fa fa-times" aria-hidden="true"></i></span>
+            <div class="include-items">
+              <div (click)="include(inc)" [ngClass]="{'choosed':newCar.Includes.indexOf(inc)>-1}" class="include-item" *ngFor="let inc of translate.currentLang=='ru'?Includes.Includes:Includes.IncludesEng">
+                {{inc}}
+              </div>
+            </div>
+          </div>
 
         </div>
         <div class="item">
-          <span class="header">{{'DESCRIPTION_ENG' | translate}}</span>
-          <textarea class="input" [(ngModel)]="newCar.Description_Eng"></textarea>
+          <span [ngClass]="{ 'is-invalid': carSubmitted && newCar.Description==null }" class="header">{{'DESCRIPTION' | translate}}</span>
+          <textarea [ngClass]="{ 'is-invalid': carSubmitted && newCar.Description==null }" class="input" [(ngModel)]="newCar.Description"></textarea>
+          <div *ngIf="carSubmitted && newCar.Description==null" class="invalid-feedback">
+            <span class="d-block is-invalid" >{{"PASSENGERS_VALIDATION" | translate}}</span>
+          </div>
         </div>
-        <button class="btn btn-primary">{{'ADD' | translate}}</button>
+        <div class="item">
+          <span [ngClass]="{ 'is-invalid': carSubmitted && newCar.Description_ENG==null }" class="header">{{'DESCRIPTION_ENG' | translate}}</span>
+          <textarea [ngClass]="{ 'is-invalid': carSubmitted && newCar.Description_ENG==null }" class="input" [(ngModel)]="newCar.Description_ENG"></textarea>
+          <div *ngIf="carSubmitted && newCar.Description_ENG==null" class="invalid-feedback">
+            <span class="d-block is-invalid" >{{"PASSENGERS_VALIDATION" | translate}}</span>
+          </div>
+        </div>
+        <button class="btn btn-primary" (click)="addCar()">{{'ADD' | translate}}</button>
       </div>
     </div>
     <p *ngIf="userService.currentUser.IsAdmin" class="line" ><span (click)="show('showAddSale')">{{'ADD_SALE' | translate}} <i class="fa" [ngClass] = "{'fa-angle-down':!showAddSale, ' fa-angle-up':showAddSale}"></i></span></p>
@@ -255,17 +283,17 @@
         <div class="row">
           <div class="col-sm-6">
             <div class="item">
-              <span class="header">{{'CAR' | translate}}</span>
+              <span [ngClass]="{ 'is-invalid': saleSubmitted && newSale.CarId==null }" class="header">{{'CAR' | translate}}</span>
               <picker *ngIf="cars.length!=0" [items]="cars" [out]="newSale" [prop]="'CarId'"></picker>
             </div>
             <div class="item">
-              <span class="header">{{'DATE_START' | translate}}</span>
+              <span [ngClass]="{ 'is-invalid': saleSubmitted && newSale.DateStart==null }" class="header">{{'DATE_START' | translate}}</span>
               <date-picker  [Out]="newSale" [Prop]="'DateStart'" [Errors]="saleErrors"  [DateStart]="newSale.DateStart"
                         [DateFinish]="newSale.DateFinish"></date-picker>
               
             </div>
             <div class="item">
-              <span class="header">{{'DATE_START' | translate}}</span>
+              <span [ngClass]="{ 'is-invalid': saleSubmitted && newSale.DateFinish==null }" class="header">{{'DATE_START' | translate}}</span>
               <date-picker  [Out]="newSale" [Prop]="'DateFinish'" [Errors]="saleErrors"  [DateStart]="newSale.DateStart"
                         [DateFinish]="newSale.DateFinish"></date-picker>
             </div>
@@ -274,11 +302,11 @@
           <div class="col-sm-6">
             <div class="item inner">
               <div class="item inner-item">
-                <span class="header">{{'DISCOUNT' | translate}}</span>
-                <input type="number" class="input"  [(ngModel)]="newSale.Discount">
+                <span [ngClass]="{ 'is-invalid': saleSubmitted && newSale.Discount==null }" class="header">{{'DISCOUNT' | translate}}</span>
+                <input [ngClass]="{ 'is-invalid': saleSubmitted && newSale.Discount==null }" type="number" class="input"  [(ngModel)]="newSale.Discount">
               </div>
               <div class="item inner-item">
-                <span class="header">{{'DAYS_NUMBER' | translate}}</span>
+                <span  class="header">{{'DAYS_NUMBER' | translate}}</span>
                 <input type="number" class="input"  [(ngModel)]="newSale.DaysNumber">
               </div>
               
@@ -300,7 +328,7 @@
           <span class="header">{{'DESCRIPTION_ENG' | translate}}</span>
           <textarea class="input" [(ngModel)]="newCar.Description_Eng"></textarea>
         </div> -->
-        <button class="btn btn-primary">{{'ADD' | translate}}</button>
+        <button (click)="addSale()" class="btn btn-primary">{{'ADD' | translate}}</button>
       </div>
     </div>
   </div>
