--- a/CarsCrete/ClientApp/src/app/feedback/feedback.component.html
+++ b/CarsCrete/ClientApp/src/app/feedback/feedback.component.html
@@ -89,7 +89,7 @@
                                 <div class="row">
                                     <div class="col-sm-9">
                                         <p>
-                                            <img class ="user-img-small"  src="{{com.User.Photo}}"> {{comment.User.Name}} 
+                                            <img class ="user-img-small"  src="{{comment.User.Photo}}"> {{comment.User.Name}} 
                                         </p>
                                         <p>{{comment.Text}}</p>
                                     </div>
