--- a/CarsCrete/ClientApp/src/app/picker/picker.component.css
+++ b/CarsCrete/ClientApp/src/app/picker/picker.component.css
@@ -69,7 +69,7 @@ i:hover{
     margin: 5px 0 5px 0;
     cursor: pointer;
     border-radius: 4px;
-    height: 60px;
+    min-height: 60px;
     display: flex;
     align-items: center;
 }
