--- a/CarsCrete/ClientApp/src/app/messager/messager.component.css
+++ b/CarsCrete/ClientApp/src/app/messager/messager.component.css
@@ -1,6 +1,7 @@
 .container{
     z-index: 800;
     max-height: 500px;
+    height: 500px;
     margin: 0;
     position: fixed;
     bottom: -283px;
@@ -121,7 +122,7 @@
     position: absolute;
     left: -70px;
 }
-.header i.fa-bell{
+.header i.fa-bell, .header-small i.fa-bell{
     position: absolute;
     right: -5px;
     font-size: 20px;
@@ -266,15 +267,21 @@ h3{
         cursor: pointer;
         
     }
-    
+    .header i.fa-bell{
+        top:0;
+        right: 0;
+    }
     .Profile, .container:not(.InPage):not(.ProfileShow){
         display: none;
     }
     .container{
         width: 100%;
+        height: 100%;
         max-height: 10000px;
+        bottom: 0px;
         margin: auto;
         left:auto;
+        right:auto;
     }
     
     .ProfileShow{
