--- a/CarsCrete/ClientApp/src/app/messager/messager.component.html
+++ b/CarsCrete/ClientApp/src/app/messager/messager.component.html
@@ -63,6 +63,9 @@
       </div>
     </div>
     <div  class="message" [ngClass]="{'my-message': mes.UserId == userId}" *ngFor="let mes of currentTopic?currentTopic.Messages:[]">
+      <div class="date" *ngIf="showDate(mes.CreateDate)">
+        <span>{{mes.CreateDate | date: 'EEEE, dd MMMM'}}</span>
+      </div>
       <div class="message-body">
         
         <p>{{mes.Text}}</p>
@@ -81,3 +84,4 @@
   <i class="fa fa-comments" ></i>
   <i *ngIf="getSeen()" class="fa fa-bell" aria-hidden="true"></i>
 </div>
+<alert  [alert] ="alert"></alert>
