--- a/CarsCrete/ClientApp/src/app/user-profile/user-profile.component.css
+++ b/CarsCrete/ClientApp/src/app/user-profile/user-profile.component.css
@@ -18,7 +18,9 @@
     margin: auto;
     
 }
-
+.dates i{
+    font-size: 30px; margin-right: 5px;
+}
 .upload{
     display: flex;
     justify-content: center;
