--- a/CarsCrete/ClientApp/src/app/user-profile/user-profile.component.html
+++ b/CarsCrete/ClientApp/src/app/user-profile/user-profile.component.html
@@ -125,11 +125,12 @@
             <span>{{'PLACE' | translate}}: {{book.Place}}</span>
           </div>
           <div class="col-sm-3 dates">
-            
+            <i style ="font-size: 30px" class="fa fa-calendar-times-o" aria-hidden="true"></i>
             <span>{{'RENT' | translate}}: {{book.DateStart | date: 'dd.MM.yyyy'}} - {{book.DateFinish | date: 'dd.MM.yyyy'}}</span>
             
           </div>
           <div class="col-sm-3 dates">
+            <i style ="font-size: 30px" class="fa fa-clock-o" aria-hidden="true"></i>
             <span>{{'CREATE_DATE' | translate}}: {{book.CreateDate | date: 'dd.MM.yyyy'}}</span>
           </div>
              
